[package]
name = "microsoft-fast-convert"
version = "0.9.0"
edition = "2021"
description = "Converter for FAST declarative HTML templates into WebUI prerelease HTML or FAST v3 TypeScript templates."
license = "MIT"
readme = "README.md"
homepage = "https://www.fast.design/"
repository = "https://github.com/microsoft/fast"
keywords = ["fast", "html", "template", "converter", "web-components"]
categories = ["template-engine", "web-programming"]

[lib]
name = "microsoft_fast_convert"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
